Fixed content jump for nav and review

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .blue-button:hover {
   background-color: #34ebcd;
   border: #34ebcd solid;
