--- a/src/pages/Review.css
+++ b/src/pages/Review.css
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 0px 32px;
 }
 
@@ -65,6 +66,9 @@
   justify-content: center;
   margin-right: 16px;
   max-width: 200px;
+  max-height: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .review-profile {
@@ -77,6 +81,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-height: 200px;
+  height: 100%;
 }
 
 .review-name {
@@ -109,4 +115,18 @@
   font-size: 20px;
   font-weight: 300;
   padding-right: 16px;
+}
+
+.review-load {
+  color: #ffffff;
+  background-color: #38d9c2;
+  border: #38d9c2 solid;
+  margin-top: 24px;
+  text-align: center;
+  padding: 8px 20px;
+  font-size: 16px;
+  border-radius: 20px;
+  max-width: 200px;
+  width: 100%;
+  transition: all 200ms ease;
 }
